# SecureShieldPro-Advanced

./: .env.example  .gitignore  ADVANCED_FEATURES_SUMMARY.md  LICENSE  PROJECT_STATUS.md  QUICKSTART.md  README.md  docker-compose.yml  start_backend.sh
.github/: copilot-instructions.md
backend/: create_test_user.py  migrate_db.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: __init__.py  advanced_threat_detection.py  ai_chat.py  ai_chat_simple.py  ai_remediation.py  assets.py  auth.py  compliance.py  findings.py  oauth.py  reports.py  scans.py  security_analysis.py  security_tools.py  soar.py  threat_hunting.py  threat_intelligence.py  users.py  vulnerability_management.py
backend/app/core/: auth.py  config.py  middleware.py  oauth.py  security_config.py  security_middleware.py  validation_middleware.py
backend/app/db/: database.py  models.py
backend/app/services/: advanced_threat_detection.py  ai_chat_enhanced.py  ai_remediation.py  ai_service_manager.py  asset_service.py  enhanced_ai_analyst.py  oauth_service.py  professional_report_generator.py  security_analysis.py  security_tools_orchestrator.py  soar.py  threat_hunting.py  threat_intelligence.py  vulnerability_management.py
backend/app/services/report_templates/: executive.html  styles.css  technical.html
backend/app/services/scanners/: base.py  sast.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/(routes)/analysis/: page.tsx
frontend/src/app/(routes)/auth/login/: page.tsx
frontend/src/app/(routes)/auth/register/: page.tsx
frontend/src/app/(routes)/compliance/: page.tsx
frontend/src/app/(routes)/findings/: page.tsx
frontend/src/app/(routes)/scans/: page.tsx
frontend/src/app/(routes)/settings/: page.tsx
frontend/src/app/(routes)/soar/: page.tsx
frontend/src/app/(routes)/threat-detection/: page.tsx
frontend/src/app/(routes)/threat-intelligence/: page.tsx
frontend/src/app/(routes)/vulnerability-management/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: AIAutoRemediation.tsx  AppShell.tsx  AssetManagement.tsx  AuthLayout.tsx  AuthWrapper.tsx  ChatDock.tsx  ConditionalAppShell.tsx  EnhancedSecurityAnalysis.tsx  FileUploadScanner.tsx  SOARPlatform.tsx  ScanPanel.tsx  SecurityDashboard.tsx  SimpleChart.tsx  ThreatHunting.tsx
frontend/src/contexts/: AuthContext.tsx
scripts/: ai_demo.py  comprehensive_security_test.py  quick_security_validation.py  security_test.py
